--- a/dlnd_face_generation_starter.ipynb
+++ b/dlnd_face_generation_starter.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,11 +261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convblock(in_channels, out_channels,kernel_size=4, stride=2, padding=1, b_n=True):\n",
+    "def convblock(in_channels, out_channels,kernel_size=4, stride=2, padding=1, b_n=False):\n",
     "            \n",
     "    layers = []\n",
     "    block = nn.Conv2d(in_channels, out_channels, kernel_size, stride, padding, bias=False) # no bias bc of b_n mean=0\n",
@@ -278,7 +278,6 @@
     "    return nn.Sequential(*layers)\n",
     "\n",
     "conv_dim = 32\n",
-    "   \n",
     "    \n",
     "class Discriminator(nn.Module):\n",
     "    def __init__(self):\n",
@@ -293,9 +292,9 @@
     "        #128x4x4\n",
     "        self.conv4 = convblock(conv_dim*4, conv_dim*8, kernel_size=4)\n",
     "        #256x2x2\n",
-    "        self.conv5 = convblock(conv_dim*8, 1, 4, 1, 0, b_n=False)\n",
+    "        self.conv5 = convblock(conv_dim*8, 1, 4, 1, 0)\n",
     "\n",
-    "    def forward(self, x):\n",
+    "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        # all hidden layers + leaky relu activation\n",
     "        x = F.leaky_relu(self.conv1(x),0.2)\n",
     "        x = F.leaky_relu(self.conv2(x),0.2)\n",
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -346,22 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deconvblock(in_channels, out_channels, kernel_size, stride=2, padding=1,  batch_norm = True):\n",
+    "def deconvblock(in_channels, out_channels, kernel_size, stride=2, padding=1,  b_n = False):\n",
     "  layers =[]\n",
     "  block = torch.nn.ConvTranspose2d(in_channels, out_channels, kernel_size, stride=stride, padding=padding, bias=False)\n",
     "  layers.append(block)\n",
-    "  if batch_norm:\n",
+    "  if b_n:\n",
     "    batch_layer = torch.nn.BatchNorm2d(out_channels)\n",
     "    layers.append(batch_layer)\n",
     "\n",
     "  return nn.Sequential(*layers)\n",
     "\n",
     "conv_dim = 32\n",
-    "\n",
     "\n",
     "class Generator(nn.Module):\n",
     "    def __init__(self, latent_dim: int):\n",
@@ -372,7 +370,7 @@
     "        self.t_conv3 = deconvblock(conv_dim*8,conv_dim*4,4)\n",
     "        self.t_conv4 = deconvblock(conv_dim*4,conv_dim*2,4)\n",
     "        self.t_conv5 = deconvblock(conv_dim*2,conv_dim,4)\n",
-    "        self.t_conv6 = deconvblock(conv_dim,3,4,batch_norm= False)\n",
+    "        self.t_conv6 = deconvblock(conv_dim,3,4)\n",
     "    \n",
     "        \n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
@@ -391,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +439,7 @@
     "    \"\"\" This function should return the optimizers of the generator and the discriminator \"\"\"\n",
     "    # TODO: implement the generator and discriminator optimizers\n",
     "    lr = 0.0002\n",
-    "    beta1 = 0.5\n",
+    "    beta1 = 0.3\n",
     "    beta2 = 0.999\n",
     "    g_optimizer = optim.Adam(discriminator.parameters(), lr, [beta1, beta2])\n",
     "    d_optimizer =optim.Adam(generator.parameters(), lr, [beta1, beta2])\n",
@@ -472,23 +470,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generator_loss(fake_logits):\n",
-    "    \"\"\" Generator loss, takes the fake scores as inputs. \"\"\"\n",
-    "    # TODO: implement the generator loss\n",
+    "def real_loss(input_logits, smooth=False):\n",
+    "\n",
+    "    batch_size = input_logits.size(0)\n",
     "    \n",
-    "    batch_size = fake_logits.size(0)\n",
-    "    labels = torch.ones(batch_size)\n",
-    "   \n",
+    "    if smooth:\n",
+    "        labels = torch.ones(batch_size)*0.9\n",
+    "    else:\n",
+    "        labels = torch.ones(batch_size) \n",
+    "\n",
+    "    train_on_gpu = torch.cuda.is_available()\n",
     "    if train_on_gpu:\n",
     "        labels = labels.cuda()\n",
     "        \n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
     "    \n",
-    "    loss = criterion(fake_logits.squeeze(), labels)\n",
+    "    loss = criterion(input_logits.squeeze(), labels)\n",
+    "    \n",
+    "    return loss\n",
+    "\n",
+    "def fake_loss(input_logits):\n",
+    "\n",
+    "    batch_size = input_logits.size(0)\n",
+    "    labels = torch.zeros(batch_size)\n",
+    "    \n",
+    "    train_on_gpu = torch.cuda.is_available()\n",
+    "    if train_on_gpu:\n",
+    "        labels = labels.cuda()\n",
+    "        \n",
+    "    criterion = nn.BCEWithLogitsLoss()\n",
+    "    \n",
+    "    loss = criterion(input_logits.squeeze(), labels)\n",
+    "    \n",
+    "    return loss\n",
+    "\n",
+    "def generator_loss(fake_logits):\n",
+    "    \"\"\" Generator loss, takes the fake scores as inputs. \"\"\"\n",
+    "    # TODO: implement the generator loss\n",
+    "\n",
+    "    loss = real_loss(fake_logits)\n",
     "\n",
     "    return loss"
    ]
@@ -504,24 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def discriminator_loss(real_logits, fake_logits):\n",
     "    \"\"\" Discriminator loss, takes the fake and real logits as inputs. \"\"\"\n",
     "    # TODO: implement the discriminator loss \n",
-    "    batch_size = real_logits.size(0)\n",
-    "    labels = torch.ones(batch_size)*0.9\n",
-    "      \n",
-    "    if train_on_gpu:\n",
-    "        labels = labels.cuda()\n",
-    "\n",
-    "    criterion = nn.BCEWithLogitsLoss()\n",
-    "    loss = criterion(real_logits.squeeze(), labels)\n",
-    "    \n",
-    "    loss = loss + generator_loss(fake_logits)\n",
-    "    \n",
+    "    loss = real_loss(real_logits)+fake_loss(fake_logits)\n",
     "    \n",
     "    return loss"
    ]
@@ -537,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,17 +566,23 @@
     "        return torch.pow(x, 2)\n",
     "\n",
     "\n",
-    "def gradient_penalty(discriminator, real_samples, fake_samples):\n",
+    "def gradient_penalty(real_samples: torch.Tensor, \n",
+    "                     fake_samples: torch.Tensor,\n",
+    "                     critic: nn.Module) -> torch.Tensor:\n",
     "    \"\"\" This function enforces \"\"\"\n",
     "    # TODO (Optional): implement the gradient penalty\n",
-    "    alpha = torch.rand(real_sample.shape)\n",
-    "    x_hat = alpha * real_sample + (1 - alpha) * fake_sample\n",
+    "    \n",
+    "    #real_samples = real_samples.cuda()\n",
+    "    #fake_samples = fake_samples.cuda()\n",
+    "    \n",
+    "    alpha = torch.rand(real_samples.shape).cuda()\n",
+    "    samples = alpha * real_samples + (1 - alpha) * fake_samples\n",
     "    \n",
     "    # calculate the gradient\n",
-    "    x_hat.requires_grad = True\n",
-    "    pred = critic(x_hat)\n",
+    "    samples.requires_grad = True\n",
+    "    pred = critic(samples)\n",
     "    grad = torch.autograd.grad(pred, \n",
-    "                               x_hat, \n",
+    "                               samples, \n",
     "                               grad_outputs=torch.ones_like(pred), \n",
     "                               create_graph=True)[0]\n",
     "    \n",
@@ -599,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,20 +632,24 @@
     "    z = np.random.uniform(-1, 1, size=(batch_size, latent_dim, 1, 1))\n",
     "    z = torch.from_numpy(z).float()\n",
     "    \n",
-    "    train_on_gpu = True\n",
+    "    train_on_gpu = torch.cuda.is_available()\n",
     "    \n",
     "    if train_on_gpu:\n",
     "        z = z.cuda()\n",
-    "    fake_images = Generator(z)\n",
+    "        \n",
+    "    fake_images = generator(z)\n",
+    "    g_loss = - fake_images.mean()\n",
     "        \n",
     "        # Compute the discriminator losses on fake images \n",
     "        # using flipped labels!\n",
-    "    D_fake = D(fake_images)\n",
-    "    g_loss = real_loss(D_fake) # use real loss to flip labels\n",
+    "    D_fake = discriminator(fake_images)\n",
+    "    #g_loss = generator_loss(D_fake) # use real loss to flip labels\n",
     "        \n",
     "        # perform backprop\n",
     "    g_loss.backward()\n",
     "    g_optimizer.step()\n",
+    "    \n",
+    "    \n",
     "\n",
     "    return {'loss': g_loss}\n",
     "\n",
@@ -634,33 +658,45 @@
     "    \"\"\" One training step of the discriminator. \"\"\"\n",
     "    # TODO: implement the discriminator step (foward pass, loss calculation and backward pass)\n",
     "\n",
-    "    d_optimizer.zero_grad()\n",
+    "    d_optimizer.zero_grad() \n",
+    "\n",
+    "    train_on_gpu = torch.cuda.is_available()\n",
+    "    if train_on_gpu:\n",
+    "        discriminator.cuda()\n",
+    "        generator.cuda()\n",
     "    \n",
     "    train_on_gpu = torch.cuda.is_available()\n",
     "    \n",
     "    if train_on_gpu:\n",
     "        real_images = real_images.cuda()\n",
-    "        \n",
-    "    D_real = Discriminator(real_images)\n",
-    "    d_real_loss = real_loss(D_real)\n",
-    "\n",
+    "    \n",
+    "    D_real = discriminator(real_images)\n",
+    "    \n",
     "    z = np.random.uniform(-1, 1, size=(batch_size, latent_dim, 1, 1))\n",
     "    z = torch.from_numpy(z).float()\n",
     "\n",
     "    train_on_gpu = torch.cuda.is_available()\n",
+    "    \n",
     "    if train_on_gpu:\n",
     "        z = z.cuda()\n",
-    "    fake_images = Generator(z)\n",
-    "         \n",
-    "    D_fake = D(fake_images.detach())\n",
+    "    \n",
+    "    fake_images = generator(z)\n",
+    "      \n",
+    "    D_fake = discriminator(fake_images.detach())\n",
     "\n",
-    "    d_loss = discriminator_loss(D_real,D_fake)\n",
+    "    #d_loss = discriminator_loss(D_real,D_fake)\n",
+    "    critic = Critic()\n",
+    "    gp = gradient_penalty(real_images, fake_images,critic)\n",
+    "    \n",
+    "    d_loss = fake_images.mean() - D_real.mean() + gp\n",
+    "    \n",
     "    d_loss.backward()\n",
     "    d_optimizer.step()\n",
+    "    \n",
+    "    \n",
     "        \n",
-    "    gp = gradient_penalty(real_images, fake_images, critic)\n",
-    "        \n",
-    "    return {'loss': d_loss, 'gp': gp}"
+    "    return {'loss': d_loss, 'gp': gp}\n",
+    "#"
    ]
   },
   {
@@ -674,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +730,7 @@
     "device = 'cuda'\n",
     "\n",
     "# number of epochs to train your model\n",
-    "n_epochs = 1\n",
+    "n_epochs = 5\n",
     "\n",
     "# number of images in each batch\n",
     "batch_size = 64"
@@ -702,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,21 +800,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() takes 1 positional argument but 2 were given",
+     "ename": "RuntimeError",
+     "evalue": "you can only change requires_grad flags of leaf variables.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-07fb2a9f0516>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m# TODO: implement the training strategy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0md_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiscriminator_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreal_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mg_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-28-a87ee0ca241a>\u001b[0m in \u001b[0;36mdiscriminator_step\u001b[0;34m(batch_size, latent_dim, real_images)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mreal_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreal_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m     \u001b[0mD_real\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDiscriminator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m     \u001b[0md_real_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreal_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mD_real\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-35060c29fc13>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m# TODO: implement the training strategy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m         \u001b[0md_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdiscriminator_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreal_images\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mg_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlatent_dim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-c94dc324de2d>\u001b[0m in \u001b[0;36mdiscriminator_step\u001b[0;34m(batch_size, latent_dim, real_images)\u001b[0m\n\u001b[1;32m     62\u001b[0m     \u001b[0;31m#d_loss = discriminator_loss(D_real,D_fake)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0mcritic\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCritic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m     \u001b[0mgp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgradient_penalty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfake_images\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcritic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0md_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfake_images\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mD_real\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mgp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-16-50d5d3054a95>\u001b[0m in \u001b[0;36mgradient_penalty\u001b[0;34m(real_samples, fake_samples, critic)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;31m# calculate the gradient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m     \u001b[0msamples\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequires_grad\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m     \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcritic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msamples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     grad = torch.autograd.grad(pred, \n",
+      "\u001b[0;31mRuntimeError\u001b[0m: you can only change requires_grad flags of leaf variables."
      ]
     }
    ],
@@ -794,7 +831,7 @@
     "        \n",
     "        # TODO: implement the training strategy\n",
     "        \n",
-    "        d_loss, gp = discriminator_step(batch_size, latent_dim, real_images)\n",
+    "        d_loss = discriminator_step(batch_size, latent_dim, real_images)\n",
     "        \n",
     "        g_loss = generator_step(batch_size, latent_dim)\n",
     "\n",
