--- a/dlnd_face_generation_starter.ipynb
+++ b/dlnd_face_generation_starter.ipynb
@@ -351,7 +351,7 @@
     "        self.tconv3 = deconvblock(conv_dim*8,conv_dim*4,4)\n",
     "        self.tconv4 = deconvblock(conv_dim*4,conv_dim*2,4)\n",
     "        self.tconv5 = deconvblock(conv_dim*2,conv_dim,4)\n",
-    "        self.tconv6 = deconvblock(conv_dim,3,4,b_n = False))\n",
+    "        self.tconv6 = deconvblock(conv_dim,3,4,b_n = False)\n",
     "    \n",
     "        \n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
